deploy/k8s/juice-shop.yaml
kind: Service
apiVersion: v1
metadata:
  name: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop:latest
        ports:
          - containerPort: 3000
