deploy/k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: vexing-ingress
spec:
  rules:
  - host: tarot.vexingworkshop.com
    http:
      paths:
      - backend:
          serviceName: web-tarot
          servicePort: 80
  - host: juice.vexingworkshop.com
    http:
      paths:
        - backend:
            serviceName: juice-shop
            servicePort: 80
